--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,9 @@ httptools==0.1.1
 httpx==0.15.4
 idna==3.0
 multidict==5.1.0
+python-dotenv==0.15.0
 rfc3986==1.4.0
 sanic==20.12.0
 sniffio==1.2.0
+SQLAlchemy==1.3.22
 websockets==8.1
-
-python-dotenv~=0.15.0
