--- a/.gitignore
+++ b/.gitignore
@@ -91,8 +91,12 @@ ipython_config.py
 #   install all needed dependencies.
 #Pipfile.lock
 
-# celery beat schedule file
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+__pypackages__/
+
+# Celery stuff
 celerybeat-schedule
+celerybeat.pid
 
 # SageMath parsed files
 *.sage.py
@@ -123,20 +127,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-@ -127,11 +123,3 @@ dmypy.json
-
-# Pyre type checker
-.pyre/
 
 #PyCharm
 .idea
 
 #Data Base
 db.sqlite
-
-Don't forget this.txt
-.idea/workspace.xml
