--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ MarkupSafe==1.1.1
 marshmallow==3.10.0
 multidict==5.1.0
 pycparser==2.20
+PyJWT==2.0.0
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-editor==1.0.4
